fix stretch divider

--- a/packages/react-components/src/divider/src/Divider.css
+++ b/packages/react-components/src/divider/src/Divider.css
@@ -5,6 +5,10 @@
     color: var(--marine-500);
 }
 
+.o-ui-divider {
+    align-self: stretch;
+}
+
 /* HORIZONTAL */
 .o-ui-divider[aria-orientation="horizontal"] {
     margin: var(--scale-delta) 0;
